name: cipher
version: 0.1.0.0
-- synopsis:
-- description:
homepage: https://github.com/callum-oakley/cipher#readme
license: BSD3
license-file: LICENSE
author: Callum Oakley
maintainer: c.oakley108@gmail.com
copyright: Callum Oakley
category: Web
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md

library
  hs-source-dirs: src/cipher
  ghc-options: -Wall
  exposed-modules: Cipher
  build-depends: base >= 4.7 && < 5, hspec, QuickCheck
  default-language: Haskell2010

executable cipher
  hs-source-dirs: src/cmd
  ghc-options: -Wall
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5, cipher

test-suite spec
  hs-source-dirs: spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5, cipher, hspec, QuickCheck
  default-language: Haskell2010
